# backend

./: .gitignore  Dockerfile  README.md  mkdocs.yml
docs/: index.md
docs/adrs/: index.md
src/: pyproject.toml
src/app/: logger.py  main.py
src/app/api/: classes.py  donuts.py  recommender.py
src/app/chain/: marketing_chain.py
src/app/tests/: donuts_test.py  marketing_chain_test.py  recommender_test.py
src/app/utils/: decorator.py
src/data/: data.json
